# libSmoothTrajectory

./: .gitignore  CMakeLists.txt
include/: smoothTrajectory.h
src/: smoothTrajectory.cpp
test/: trajectory.cpp
